--- a/notebooks/train-yolov9-object-detection-on-custom-dataset.ipynb
+++ b/notebooks/train-yolov9-object-detection-on-custom-dataset.ipynb
@@ -55,39 +55,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_5hX88yficL7",
-        "outputId": "38f89f4f-a53d-4f55-d327-eb5281528ce9"
+        "outputId": "43bfb50e-0aa8-4ce4-cf74-389545fe8357"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mon Nov 10 05:38:39 2025       \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-            "|-----------------------------------------+------------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                        |               MIG M. |\n",
-            "|=========================================+========================+======================|\n",
-            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   42C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
-            "|                                         |                        |                  N/A |\n",
-            "+-----------------------------------------+------------------------+----------------------+\n",
+            "Thu Feb 29 11:06:02 2024       \n",
+            "+---------------------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 535.104.05             Driver Version: 535.104.05   CUDA Version: 12.2     |\n",
+            "|-----------------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                                         |                      |               MIG M. |\n",
+            "|=========================================+======================+======================|\n",
+            "|   0  Tesla T4                       Off | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   48C    P8              10W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "|                                         |                      |                  N/A |\n",
+            "+-----------------------------------------+----------------------+----------------------+\n",
             "                                                                                         \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                              |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-            "|        ID   ID                                                               Usage      |\n",
-            "|=========================================================================================|\n",
-            "|  No running processes found                                                             |\n",
-            "+-----------------------------------------------------------------------------------------+\n"
+            "+---------------------------------------------------------------------------------------+\n",
+            "| Processes:                                                                            |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+            "|        ID   ID                                                             Usage      |\n",
+            "|=======================================================================================|\n",
+            "|  No running processes found                                                           |\n",
+            "+---------------------------------------------------------------------------------------+\n"
           ]
         }
       ],
@@ -116,9 +116,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rowKDIT-jJ9k",
-        "outputId": "2977708c-6fed-4f78-ce79-f7d948d8454d"
+        "outputId": "e15d746f-d9dc-4cad-d3cd-946d49783189"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,29 +155,10 @@
         "!pip install -r requirements.txt -q"
       ],
       "metadata": {
-        "id": "pixgo4qnjdoU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bba5eb5a-9b21-442d-91f2-43e0e86883ed"
+        "id": "pixgo4qnjdoU"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'yolov9'...\n",
-            "remote: Enumerating objects: 325, done.\u001b[K\n",
-            "remote: Total 325 (delta 0), reused 0 (delta 0), pack-reused 325 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (325/325), 2.25 MiB | 6.13 MiB/s, done.\n",
-            "Resolving deltas: 100% (162/162), done.\n",
-            "/content/yolov9\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m32.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -194,27 +175,10 @@
         "!pip install -q roboflow"
       ],
       "metadata": {
-        "id": "TPGqlohQqgAO",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6b269a1b-1a0d-4f4f-fa20-3a423332056e"
+        "id": "TPGqlohQqgAO"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/89.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m89.9/89.9 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.8/66.8 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.9/49.9 MB\u001b[0m \u001b[31m21.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m77.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.2/4.2 MB\u001b[0m \u001b[31m91.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -245,7 +209,7 @@
       "metadata": {
         "id": "h7j3aUE7l1Je"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,21 +222,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Au6np1JS8eRB",
-        "outputId": "87111118-c62b-459d-fb21-a49fcb22268c"
+        "outputId": "ddf7bd59-9fd0-43a2-e743-9a52852930ce"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "total 402448\n",
-            "drwxr-xr-x 2 root root      4096 Nov 10 05:39 .\n",
-            "drwxr-xr-x 1 root root      4096 Nov 10 05:39 ..\n",
-            "-rw-r--r-- 1 root root  51508261 Feb 18  2024 gelan-c.pt\n",
-            "-rw-r--r-- 1 root root 117203713 Feb 18  2024 gelan-e.pt\n",
-            "-rw-r--r-- 1 root root 103153312 Feb 18  2024 yolov9-c.pt\n",
-            "-rw-r--r-- 1 root root 140217688 Feb 18  2024 yolov9-e.pt\n"
+            "total 402440\n",
+            "drwxr-xr-x 2 root root      4096 Feb 29 11:06 .\n",
+            "drwxr-xr-x 1 root root      4096 Feb 29 11:06 ..\n",
+            "-rw-r--r-- 1 root root  51508261 Feb 18 12:36 gelan-c.pt\n",
+            "-rw-r--r-- 1 root root 117203713 Feb 18 12:36 gelan-e.pt\n",
+            "-rw-r--r-- 1 root root 103153312 Feb 18 12:36 yolov9-c.pt\n",
+            "-rw-r--r-- 1 root root 140217688 Feb 18 12:36 yolov9-e.pt\n"
           ]
         }
       ]
@@ -345,42 +309,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GzGyLetWoTWp",
-        "outputId": "2474b869-3d6b-4c2c-949f-f9f1fb8777fb"
+        "outputId": "c51e7975-c75f-474a-e217-6e070f4176f8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[34m\u001b[1mdetect: \u001b[0mweights=['/content/weights/gelan-c.pt'], source=/content/data/dog.jpeg, data=data/coco128.yaml, imgsz=[640, 640], conf_thres=0.1, iou_thres=0.45, max_det=1000, device=0, view_img=False, save_txt=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, visualize=False, update=False, project=runs/detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False, dnn=False, vid_stride=1\n",
-            "YOLOv5 🚀 1e33dbb Python-3.12.12 torch-2.8.0+cu126 CUDA:0 (Tesla T4, 15095MiB)\n",
+            "YOLOv5 🚀 1e33dbb Python-3.10.12 torch-2.1.0+cu121 CUDA:0 (Tesla T4, 15102MiB)\n",
             "\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/content/yolov9/detect.py\", line 232, in <module>\n",
-            "    main(opt)\n",
-            "  File \"/content/yolov9/detect.py\", line 227, in main\n",
-            "    run(**vars(opt))\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/_contextlib.py\", line 120, in decorate_context\n",
-            "    return func(*args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/yolov9/detect.py\", line 68, in run\n",
-            "    model = DetectMultiBackend(weights, device=device, dnn=dnn, data=data, fp16=half)\n",
-            "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/yolov9/models/common.py\", line 684, in __init__\n",
-            "    model = attempt_load(weights if isinstance(weights, list) else w, device=device, inplace=True, fuse=fuse)\n",
-            "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/content/yolov9/models/experimental.py\", line 75, in attempt_load\n",
-            "    ckpt = torch.load(attempt_download(w), map_location='cpu')  # load\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/torch/serialization.py\", line 1529, in load\n",
-            "    raise pickle.UnpicklingError(_get_wo_message(str(e))) from None\n",
-            "_pickle.UnpicklingError: Weights only load failed. This file can still be loaded, to do so you have two options, \u001b[1mdo those steps only if you trust the source of the checkpoint\u001b[0m. \n",
-            "\t(1) In PyTorch 2.6, we changed the default value of the `weights_only` argument in `torch.load` from `False` to `True`. Re-running `torch.load` with `weights_only` set to `False` will likely succeed, but it can result in arbitrary code execution. Do it only if you got the file from a trusted source.\n",
-            "\t(2) Alternatively, to load with `weights_only=True` please check the recommended steps in the following error message.\n",
-            "\tWeightsUnpickler error: Unsupported global: GLOBAL models.yolo.DetectionModel was not an allowed global by default. Please use `torch.serialization.add_safe_globals([models.yolo.DetectionModel])` or the `torch.serialization.safe_globals([models.yolo.DetectionModel])` context manager to allowlist this global if you trust this class/function.\n",
-            "\n",
-            "Check the documentation of torch.load to learn more about types accepted by default with weights_only https://pytorch.org/docs/stable/generated/torch.load.html.\n"
+            "Fusing layers... \n",
+            "Model summary: 467 layers, 25472640 parameters, 0 gradients, 102.8 GFLOPs\n",
+            "image 1/1 /content/data/dog.jpeg: 640x384 1 person, 1 car, 1 dog, 1 handbag, 235.8ms\n",
+            "Speed: 0.6ms pre-process, 235.8ms inference, 704.3ms NMS per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1mruns/detect/exp\u001b[0m\n"
           ]
         }
       ]
